# wiper

./: .gitignore  LICENSE  README.md
src/: lib.rs  main.rs
src/app/: actions.rs  mod.rs  ui.rs
src/utils/: event_handler.rs  key_display.rs  mod.rs  walker.rs
wiper/: Cargo.toml
wiper/src/: lib.rs  main.rs
wiper/src/app/: actions.rs  mod.rs  state.rs  ui.rs
wiper/src/inputs/: events.rs  key.rs  mod.rs
wiper/src/io/: handler.rs  mod.rs
wiper/src/utils/: focusable_text_area.rs  key_display.rs  mod.rs  statefull_list.rs  walker.rs
