[package]
name = "wiper"
version = "0.0.1"
edition = "2021"
authors = ["Enguerrand DE SMET"]

[dependencies]
clap = {version = "4.*", features = ["derive"]}

log = "0.4"
eyre = "0.6"
ratatui = { version = "0.22.0", features = ['crossterm', 'serde', 'all-widgets'] }
crossterm = "0.27"

tokio = { version = "1", features = ["full"] }

strum = "0.25"
strum_macros = "0.25"

walkdir = "2.3.3"
regex = "1.7"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1