[package]
name = "wiper"
version = "0.0.1"
edition = "2021"
authors = ["Enguerrand DE SMET"]

[dependencies]
clap = {version = "4.*", features = ["derive"]}

log = "0.4"
eyre = "0.6"
ratatui = { version = "0.22.0", features = ['crossterm', 'serde'] }
# Fork of tui-textarea with an updated ratatui dependency (PR not merged yet)
tui-textarea = { git = "https://github.com/sadovsf/tui-textarea", version = "0.2.0", features = ["ratatui-crossterm"], default-features=false }
crossterm = "0.26"

strum = "0.25"
strum_macros = "0.25"

walkdir = "2.3.3"
regex = "1.7"
trash = "3.0.6"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
